Code/syntax.output
State 24 conflicts: 1 shift/reduce
State 29 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | ID LP VarList error RP
   22       | ID LP error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | LC DefList StmtList error

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | RETURN Exp error
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | Exp error SEMI

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | Specifier error SEMI
   42    | Specifier DecList error
   43    | error SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | LP Exp error RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp LB error RB
   64    | Exp LB Exp error RB
   65    | Exp ASSIGNOP error
   66    | Exp AND error
   67    | Exp OR error
   68    | Exp RELOP error
   69    | Exp PLUS error
   70    | Exp MINUS error
   71    | Exp STAR error
   72    | Exp DIV error
   73    | Exp DOT ID
   74    | ID
   75    | INT
   76    | FLOAT

   77 Args: Exp COMMA Args
   78     | Exp
   79     | Exp error Args


Terminals, with rules where they appear

$end (0) 0
error (256) 7 21 22 27 33 37 41 42 43 57 63 64 65 66 67 68 69 70 71
    72 79
INT (258) 18 75
FLOAT (259) 76
ID (260) 14 16 17 19 20 21 22 60 61 73 74
SEMI (261) 4 5 7 30 32 37 40 41 43
TYPE (262) 10
STRUCT (263) 12 13
RETURN (264) 32 33
IF (265) 34 35
WHILE (266) 36
COMMA (267) 9 23 45 77
OR (268) 50 67
AND (269) 49 66
RELOP (270) 51 68
PLUS (271) 52 69
MINUS (272) 53 58 70
STAR (273) 54 71
DIV (274) 55 72
LB (275) 18 62 63 64
RB (276) 18 62 63 64
LC (277) 12 26 27
RC (278) 12 26
DOT (279) 73
LP (280) 19 20 21 22 34 35 36 56 57 60 61
RP (281) 19 20 21 22 34 35 36 56 57 60 61
NOT (282) 59
ASSIGNOP (283) 47 48 65
ELSE (284) 35
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 7 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 7 25 40 41 42
StructSpecifier (37)
    on left: 12 13, on right: 11
OptTag (38)
    on left: 14 15, on right: 12
Tag (39)
    on left: 16, on right: 13
VarDec (40)
    on left: 17 18, on right: 8 9 18 25 46 47
FunDec (41)
    on left: 19 20 21 22, on right: 6
VarList (42)
    on left: 23 24, on right: 19 21 23
ParamDec (43)
    on left: 25, on right: 23 24
CompSt (44)
    on left: 26 27, on right: 6 31
StmtList (45)
    on left: 28 29, on right: 26 27 28
Stmt (46)
    on left: 30 31 32 33 34 35 36 37, on right: 28 34 35 36
DefList (47)
    on left: 38 39, on right: 12 26 27 38
Def (48)
    on left: 40 41 42 43, on right: 38
DecList (49)
    on left: 44 45, on right: 40 42 45
Dec (50)
    on left: 46 47, on right: 44 45
Exp (51)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 76, on right: 30 32 33 34 35 36 37
    47 48 49 50 51 52 53 54 55 56 57 58 59 62 63 64 65 66 67 68 69
    70 71 72 73 77 78 79
Args (52)
    on left: 77 78 79, on right: 60 77 79


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . ExtDecList error SEMI

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP
   21       | ID . LP VarList error RP
   22       | ID . LP error RP

    LP  shift, and go to state 19

    $default  reduce using rule 17 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI
    7       | Specifier ExtDecList . error SEMI

    error  shift, and go to state 20
    SEMI   shift, and go to state 21


State 16

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 8 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 24

    CompSt  go to state 25


State 18

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 28
    Def              go to state 29


State 19

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP
   21       | ID LP . VarList error RP
   22       | ID LP . error RP

    error   shift, and go to state 30
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 31

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


State 20

    7 ExtDef: Specifier ExtDecList error . SEMI

    SEMI  shift, and go to state 35


State 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 22

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 16


State 23

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 38


State 24

   26 CompSt: LC . DefList StmtList RC
   27       | LC . DefList StmtList error

    error   shift, and go to state 26
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 39
    Def              go to state 29


State 25

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 26

   43 Def: error . SEMI

    SEMI  shift, and go to state 40


State 27

   40 Def: Specifier . DecList SEMI
   41    | Specifier . error SEMI
   42    | Specifier . DecList error

    error  shift, and go to state 41
    ID     shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 28

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 29

   38 DefList: Def . DefList

    error   shift, and go to state 26
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 29


State 30

   22 FunDec: ID LP error . RP

    RP  shift, and go to state 47


State 31

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 32

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 48


State 33

   19 FunDec: ID LP VarList . RP
   21       | ID LP VarList . error RP

    error  shift, and go to state 49
    RP     shift, and go to state 50


State 34

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 24 (VarList)


State 35

    7 ExtDef: Specifier ExtDecList error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 36

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 37

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 38

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


State 39

   26 CompSt: LC DefList . StmtList RC
   27       | LC DefList . StmtList error

    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    RETURN  shift, and go to state 56
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58
    MINUS   shift, and go to state 59
    LC      shift, and go to state 24
    LP      shift, and go to state 60
    NOT     shift, and go to state 61

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


State 40

   43 Def: error SEMI .

    $default  reduce using rule 43 (Def)


State 41

   41 Def: Specifier error . SEMI

    SEMI  shift, and go to state 66


State 42

   18 VarDec: VarDec . LB INT RB
   46 Dec: VarDec .
   47    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 23
    ASSIGNOP  shift, and go to state 67

    $default  reduce using rule 46 (Dec)


State 43

   40 Def: Specifier DecList . SEMI
   42    | Specifier DecList . error

    error  shift, and go to state 68
    SEMI   shift, and go to state 69


State 44

   44 DecList: Dec .
   45        | Dec . COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 44 (DecList)


State 45

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 46

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 47

   22 FunDec: ID LP error RP .

    $default  reduce using rule 22 (FunDec)


State 48

   18 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 25 (ParamDec)


State 49

   21 FunDec: ID LP VarList error . RP

    RP  shift, and go to state 71


State 50

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 51

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 72
    ParamDec         go to state 34


State 52

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 53

   75 Exp: INT .

    $default  reduce using rule 75 (Exp)


State 54

   76 Exp: FLOAT .

    $default  reduce using rule 76 (Exp)


State 55

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   74    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 74 (Exp)


State 56

   32 Stmt: RETURN . Exp SEMI
   33     | RETURN . Exp error

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 59
    LP     shift, and go to state 60
    NOT    shift, and go to state 61

    Exp  go to state 74


State 57

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 75


State 58

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 76


State 59

   58 Exp: MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 59
    LP     shift, and go to state 60
    NOT    shift, and go to state 61

    Exp  go to state 77


State 60

   56 Exp: LP . Exp RP
   57    | LP . Exp error RP

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 59
    LP     shift, and go to state 60
    NOT    shift, and go to state 61

    Exp  go to state 78


State 61

   59 Exp: NOT . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 59
    LP     shift, and go to state 60
    NOT    shift, and go to state 61

    Exp  go to state 79


State 62

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 63

   26 CompSt: LC DefList StmtList . RC
   27       | LC DefList StmtList . error

    error  shift, and go to state 80
    RC     shift, and go to state 81


State 64

   28 StmtList: Stmt . StmtList

    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    RETURN  shift, and go to state 56
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58
    MINUS   shift, and go to state 59
    LC      shift, and go to state 24
    LP      shift, and go to state 60
    NOT     shift, and go to state 61

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 82
    Stmt      go to state 64
    Exp       go to state 65


State 65

   30 Stmt: Exp . SEMI
   37     | Exp . error SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . LB Exp error RB
   65    | Exp . ASSIGNOP error
   66    | Exp . AND error
   67    | Exp . OR error
   68    | Exp . RELOP error
   69    | Exp . PLUS error
   70    | Exp . MINUS error
   71    | Exp . STAR error
   72    | Exp . DIV error
   73    | Exp . DOT ID

    error     shift, and go to state 83
    SEMI      shift, and go to state 84
    OR        shift, and go to state 85
    AND       shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    LB        shift, and go to state 92
    DOT       shift, and go to state 93
    ASSIGNOP  shift, and go to state 94


State 66

   41 Def: Specifier error SEMI .

    $default  reduce using rule 41 (Def)


State 67

   47 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 59
    LP     shift, and go to state 60
    NOT    shift, and go to state 61

    Exp  go to state 95


State 68

   42 Def: Specifier DecList error .

    $default  reduce using rule 42 (Def)


State 69

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 70

   45 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 96
    Dec      go to state 44


State 71

   21 FunDec: ID LP VarList error RP .

    $default  reduce using rule 21 (FunDec)


State 72

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 73

   60 Exp: ID LP . Args RP
   61    | ID LP . RP

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 59
    LP     shift, and go to state 60
    RP     shift, and go to state 97
    NOT    shift, and go to state 61

    Exp   go to state 98
    Args  go to state 99


State 74
